quick fix on the text spacing

--- a/src/scss/import/_style-content.scss
+++ b/src/scss/import/_style-content.scss
@@ -1066,6 +1066,11 @@
                 margin: 20px 0 10px;
             }
 
+            p{
+                line-height: 1.8;
+                margin: 0 0 20px;
+            }
+
             hr{
                 border: 0;
                 height: 1px;
